:construction: GAME Loop

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
       <section>
         <h1>Hang Chat</h1>
         <ul></ul>
-        <form>
-          <!-- <div id="prompt"></div> -->
-          <input id="guessWord" type="text" autocomplete="off" />
+        <form id="submit">
+          <input id="guessLetter" type="text" autocomplete="off" required />
           <button id="go"><span id="guess">Send</span></button>
         </form>
       </section>
@@ -50,8 +49,8 @@
         />
       </svg>
 
-      <div id="text">
-        <div id="letters"></div>
+      <div id="textbox">
+        <div id="lettersss"></div>
       </div>
     </main>
 
