--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,5 +5,5 @@
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <!-- <link rel="stylesheet" href="./css/generic.css" /> -->
   <link rel="stylesheet" href="./css/style.css" />
-  <title>Hangman Chat</title>
+  <title>Hangman Chatroom</title>
 </head>
