--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <h1>Hang Chat</h1>
         <ul></ul>
         <form id="submit">
-          <input id="guessLetter" type="text" autocomplete="off" required />
+          <input id="guessWord" maxlength="1" type="text" autocomplete="off" required />
           <button id="go"><span id="guess">Send</span></button>
         </form>
       </section>
