--- a/public/css/generic.css
+++ b/public/css/generic.css
@@ -99,6 +99,11 @@ svg {
   margin-top: 0.5rem;
 }
 /* main */
+
+#letters {
+  font-size: 50px;
+}
+
 main {
   transition: transform 0.25s ease-in;
 }
