--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,7 @@
                   transform="translate(-12.5 -3.1)"
                 />
               </svg>
+              <div id="letters"></div>
             <script src="/socket.io/socket.io.js"></script>
             <script src="/script.js"></script>
           </body>
